--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <h3>Journal Papers</h3>
 <ol>
 	<li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu*, and Yan-Jun Liu*, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024,  DOI: 10.1109/TNSE.2024.3409900. (Accepted/In press) (<strong>SCI, Q1</strong>) </a>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu*, and Yan-Jun Liu*, &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/10559444" target="_blank">Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing</a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024,  DOI: 10.1109/TNSE.2024.3409900. (Accepted/In press) (<strong>SCI, Q1</strong>) </a>
        </li>
        <li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu*, Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; <i>Journal of the Franklin Institute</i>, 2024. (Accepted/In press) (<strong>SCI, JCR Q1</strong>) </a>
