--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </ul>
 
 <h2>Publications</h2>
-<h3>Submitted for publication </h3>
+<h3>Finished/Submitted for publication </h3>
 <ol>
 	<li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
@@ -114,7 +114,7 @@
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
         </li>
 	 <li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Twin-Based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2024.    </a>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Cloud-Platform-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
         </li> 
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
@@ -122,6 +122,9 @@
 	<li>
                           <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; 2022.    </a>
 	</li>	
+	 <li>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu, &quot; Twin-Based Cyber-Security Control for  Swarm with Aggregation–Dispersion Ability </a>,&quot; 2024. (<i>Conference</i>)   </a>
+        </li>
 	<li>
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>, Chenjun Liu, Peng Cheng, Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
 	</li>
