--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
         </li>
 	<li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu, Chenjun Liu, &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
         </li>
 	 <li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Cloud-Platform-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
