--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 	<li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
         </li>
-	<li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu, Chenjun Liu, &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
-        </li>
-	 <li>
+        <li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Cloud-Platform-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
         </li> 
+	<li>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu, and Chenjun Liu, &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
+        </li>
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>
