--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </ul>
 
 <h2>Publications</h2>
-<h3>Finished/Submitted for publication </h3>
+<h3>Finished/Submitted for Publication </h3>
 <ol>
 	<li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
