--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  
 <h2>Biography</h2>
 <p>
-	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China. I obtained my B.E. degrees in <i>Automation</i> from <a href="http://ai.njau.edu.cn/#"> Department of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">A/Prof. Wei Lu</a>.
+	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China. I obtained my B.E. degrees in <i>Automation</i> from <a href="http://ai.njau.edu.cn/#"> Department of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="https://faculty.njau.edu.cn/luwei1/zh_CN/index.htm">Prof. Wei Lu</a>.
  I obtained my M.S. degree in <i>Electronic Information</i> with the <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned System Research Institute</a>, <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a> in 2023, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. 
  From August 2024, I will be studying for a Ph.D. in <i>Electromechanical Engineering</i> at the <a href="https://www.fst.um.edu.mo/eme/">Department of Electromechanical Engineering</a>, <a href="https://www.um.edu.mo/">University of Macau</a>, under the supervision of <a href="https://www.fst.um.edu.mo/personal/jasonliu/">Ass.Prof. Jason J. R. Liu.</a> </div>
 <p></p>
