--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 <h3>Journal Papers</h3>
 <ol>
 	<li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu*, and Yan-Jun Liu*, &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/10559444" target="_blank">Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing</a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024,  DOI: 10.1109/TNSE.2024.3409900. (Accepted/In press) (<strong>SCI, Q1</strong>) </a>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu*, and Yan-Jun Liu*, &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/10559444" target="_blank">Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing</a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024,  DOI: 10.1109/TNSE.2024.3409900. (<strong>SCI, Q1</strong>) </a>
        </li>
        <li>
-	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu*, Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; <i>Journal of the Franklin Institute</i>, 2024. (Accepted/In press) (<strong>SCI, JCR Q1</strong>) </a>
+	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu*, Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot;  <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S001600322400440X" target="_blank">Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; <i>Journal of the Franklin Institute</i>, 2024.  DOI: 10.1016/j.jfranklin.2024.107019. (<strong>SCI, JCR Q1</strong>) </a>
        </li>
        <li>
                           <strong>Jiacheng Li</strong>,  Junmin Liu, Shuaiqi Huangfu, Guoyan Cao*, and Dengxiu Yu*, &quot; <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S0307904X22006114" target="_blank">Leader-follower Formation of Light-weight UAVs with Novel Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022, DOI: https://doi.org/10.1016/j.apm.2022.12.032. (<strong>Top, SCI, Q1</strong>)  </a>
