--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 	<li>
                    Journal Reviewer for  
 	       <ul>	
+		       <li> Defence Technology </li>
 	               <li> International Journal of Aerospace Engineering</li>
 		       <li> Transactions of the Institute of Measurement and Control</li>
 		       <li> Automatika: Journal for Control, Measurement, Electronics, Computing and Communications</li>
