--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 
 <h2>News</h2>
 <ul>
+	 <li>
+	 Jul. 2024 Our paper on collision-free cooperation control is accepted by IEEE/CAA Journal of Automatica Sinica.
+	</li>
 	<li>
 	 Jun. 2024 Our paper on time-varying UAV formation control is accepted by Journal of the Franklin Institute.
 	</li>
@@ -108,19 +111,19 @@
 <h3>Finished/Submitted for Publication </h3>
 <ol>
 	<li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Network Progressive Recovery Control for  Swarm with Intra-Group Differences: A Deep Q-Learning Strategy </a>,&quot; 2024.    </a>
+        </li>
+	<li>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
         </li>
         <li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Cloud-Platform-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Cloud-Platform-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
         </li> 
 	<li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu, and Chenjun Liu, &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
+                          <strong>Jiacheng Li</strong>, Wenjun Luo, Chenjun Liu, and Jason J. R. Liu, &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
         </li>
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
-	</li>
-	<li>
-                          <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; 2022.    </a>
 	</li>	
 	 <li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu, &quot; Twin-Based Cyber-Security Control for  Swarm with Aggregation–Dispersion Ability </a>,&quot; 2024. (<i>Conference</i>)   </a>
@@ -131,6 +134,9 @@
 </ol>
 <h3>Journal Papers</h3>
 <ol>
+	<li>
+                          <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu*, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2024. (<strong>Top, SCI, Q1</strong>) (Accepted/In press) </a>
+        </li>
 	<li>
                           <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu*, and Yan-Jun Liu*, &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/10559444" target="_blank">Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing</a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024,  DOI: 10.1109/TNSE.2024.3409900. (<strong>SCI, Q1</strong>) </a>
        </li>
