--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<h3> Faculty of Science and Technology, University of Macau</h3>
                               
 				<p>
-					Email: &nbsp;&nbsp; <a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a> and <a href="mailto:jiacheng.li@um.edu.mo">jiacheng.li@connect.um.edu.mo</a>.
+					Email: &nbsp;&nbsp; <a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a> and <a href="mailto:jiacheng.li@connect.um.edu.mo">jiacheng.li@connect.um.edu.mo</a>.
 				</p>
                  <!--      <p>&nbsp; </p>-->
 				<p>
