--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                           <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Cloud-Platform-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
         </li> 
 	<li>
-                          <strong>Jiacheng Li</strong>, Wenjun Luo, Chenjun Liu, and Jason J. R. Liu, &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
-        </li>
-	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>	
+	<li>
+                          <strong>Jiacheng Li</strong>, Wenjun Luo, Chenjun Liu, and Jason J. R. Liu, &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024. (<i>Brief</i>)    </a>
+        </li>
 	 <li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu, &quot; Twin-Based Cyber-Security Control for  Swarm with Aggregation–Dispersion Ability </a>,&quot; 2024. (<i>Conference</i>)   </a>
+                          <strong>Jiacheng Li</strong>, Wenjun Luo,  Jason J. R. Liu, and James Lam, &quot; Twin-Based Cyber-Security Control for  Swarm with Aggregation–Dispersion Ability </a>,&quot; 2024. (<i>Conference</i>)   </a>
         </li>
 	<li>
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>, Chenjun Liu, Peng Cheng, Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
@@ -234,7 +234,7 @@
 	<li>
                    Conference Reviewer for
 		<ul>
-		       <li> Chinese Automation Congress (CAC2021, CAC2022, CAC2023)</li>
+		       <li> Chinese Automation Congress, 2021-Present</li>
 	       </ul>	
 	</li>
 </ol>
