--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                           <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
         </li>
         <li>
-                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Cloud-Platform-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Cloud-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
         </li> 
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
