--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
 	<li>
 		Former Laboratory link <a href="https://www.njaurobot.cn">(Intelligent Robot Laboratory)</a>  (<a href="https://www.njaurobot.cn/student2/lijiacheng.html">https://www.njaurobot.cn/student2/lijiacheng.html</a>).
 	</li>
+	 <li>
+		Currently working laboratory link <a href="https://www.fst.um.edu.mo/research/laboratories/intelligent-unmanned-systems-laboratory/">(Intelligent Unmanned Systems Laboratory)</a>.
+	</li>
 </ol>
 	    
 	    
