--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
 	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="280"><br></td>
 	
 	<li>
-		UAV Affine Formation Control
+		Resilient Platooning Control
 	</li>
-	<td><img src="./JC_L_files/formation.png" border="0" height="250"><br></td>
+	<td><img src="./JC_L_files/Vehicle_Platoon.png" border="0" height="280"><br></td>
 	
         <li>
 		Leader-Follower Formation control
