--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 	<li>
                    Conference Reviewer for
 		<ul>
-		       <li> Chinese Automation Congress, 2021-Present</li>
+		       <li> Chinese Automation Congress, 2021-2024</li>
 	       </ul>	
 	</li>
 </ol>
@@ -294,7 +294,7 @@
 	<li>
 		Resilient Platooning Control
 	</li>
-	<td><img src="./JC_L_files/Vehicle_Platoon.png" border="0" height="280"><br></td>
+	<td><img src="./JC_L_files/Vehicle_Platoon.png" border="0" height="290"><br></td>
 	
         <li>
 		Leader-Follower Formation control
@@ -346,7 +346,7 @@
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng LI | Last updated: 08/2024</center>
+	<center>© Jiacheng LI | Last updated: 09/2024</center>
     <!--<center>© Jiacheng LI
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
