--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
 	<li>
                    Journal Reviewer for  
 	       <ul>	
+		       <li> Neurocomputing </li>
 		       <li> Defence Technology </li>
 	               <li> International Journal of Aerospace Engineering</li>
 		       <li> Transactions of the Institute of Measurement and Control</li>
