--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                           <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu*, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2024. (<strong>Top, SCI, Q1</strong>) (Accepted/In press) </a>
         </li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu*, and Yan-Jun Liu*, &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/10559444" target="_blank">Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing</a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024,  DOI: 10.1109/TNSE.2024.3409900. (<strong>SCI, Q1</strong>) </a>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu*, and Yan-Jun Liu*, &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/10559444" target="_blank">Cooperative Control of Air–Ground Swarms Under DoS Attacks via Cloud–Fog Computing</a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024,  DOI: 10.1109/TNSE.2024.3409900. (<strong>SCI, Q1</strong>) </a>
        </li>
        <li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu*, Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot;  <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S001600322400440X" target="_blank">Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; <i>Journal of the Franklin Institute</i>, 2024.  DOI: 10.1016/j.jfranklin.2024.107019. (<strong>SCI, JCR Q1</strong>) </a>
