--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                          Wei Lu*, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song, &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022, DOI: 10.1109/JAS.2023.123072.(<strong>Top, SCI, Q1</strong>) (First author is tutor)</a>
 	</li>
 	 <li>
-                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li*, &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/abstract/document/10247627" target="_blank">An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, vol. 5, no. 5, pp. 1918-1938, 2024, DOI: 10.1109/TAI.2023.3314581.(First author is tutor)</a> 
+                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li*, &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/abstract/document/10247627" target="_blank">An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, DOI: 10.1109/TAI.2023.3314581.(First author is tutor)</a> 
         </li>
 </ol>
 
