--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 <h3>Finished/Submitted for Publication </h3>
 <ol>
 	<li>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, et al,  &quot; Event-/Self-Triggering Cooperative Adaptive Cruise Control for Physical-/Twin-Vehicle Platoon Under Hybrid Attacks </a>,&quot; 2024.    </a>
+        </li>
+	<li>
                           <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Network Progressive Recovery Control for  Swarm with Intra-Group Differences: A Deep Q-Learning Strategy </a>,&quot; 2024.    </a>
         </li>
 	<li>
