--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 <h3>Finished/Submitted for Publication </h3>
 <ol>
 	<li>
-                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, et al,  &quot; Event-/Self-Triggering Cooperative Adaptive Cruise Control for Physical-/Twin-Vehicle Platoon Under Hybrid Attacks </a>,&quot; 2024.    </a>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, Yan-Jun Liu, James Lam, &quot; Event-/Self-Triggering Cooperative Adaptive Cruise Control for Physical-/Twin-Vehicle Platoon Under Hybrid Attacks </a>,&quot; 2024.    </a>
         </li>
 	<li>
                           <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Network Progressive Recovery Control for  Swarm with Intra-Group Differences: A Deep Q-Learning Strategy </a>,&quot; 2024.    </a>
         </li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu, Dengxiu Yu, C. L. Philip Chen, and James Lam,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
         </li>
         <li>
                           <strong>Jiacheng Li</strong>, Jason J. R. Liu, James Lam, et al,  &quot; Cloud-Based Security Control for UAV Swarm Against Complex FDI Attacks: From Twin to Physical </a>,&quot; 2024.    </a>
@@ -122,9 +122,9 @@
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>	
-	<li>
-                          <strong>Jiacheng Li</strong>, Wenjun Luo, Chenjun Liu, and Jason J. R. Liu, &quot; Self-Healing Control for Networked System Against Hybrid Attacks with Application to RLC Circuits </a>,&quot; 2024. (<i>Brief</i>)    </a>
-        </li>
+      %  <li>
+      %                    <strong>Jiacheng Li</strong>, Wenjun Luo, Chenjun Liu, and Jason J. R. Liu, &quot; Self-Healing Control for Networked System Against Hybrid Attacks with Application to RLC Circuits </a>,&quot; 2024. (<i>Brief</i>)    </a>
+      %  </li>
 	 <li>
                           <strong>Jiacheng Li</strong>, Wenjun Luo,  Jason J. R. Liu, and James Lam, &quot; Twin-Based Cyber-Security Control for  Swarm with Aggregation–Dispersion Ability </a>,&quot; 2024. (<i>Conference</i>)   </a>
         </li>
