--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>	
-      %  <li>
-      %                    <strong>Jiacheng Li</strong>, Wenjun Luo, Chenjun Liu, and Jason J. R. Liu, &quot; Self-Healing Control for Networked System Against Hybrid Attacks with Application to RLC Circuits </a>,&quot; 2024. (<i>Brief</i>)    </a>
-      %  </li>
+       <!--  <li>
+                           <strong>Jiacheng Li</strong>, Wenjun Luo, Chenjun Liu, and Jason J. R. Liu, &quot; Self-Healing Control for Networked System Against Hybrid Attacks with Application to RLC Circuits </a>,&quot; 2024. (<i>Brief</i>)    </a>
+         </li> -->
 	 <li>
                           <strong>Jiacheng Li</strong>, Wenjun Luo,  Jason J. R. Liu, and James Lam, &quot; Twin-Based Cyber-Security Control for  Swarm with Aggregation–Dispersion Ability </a>,&quot; 2024. (<i>Conference</i>)   </a>
         </li>
